# qasm-quipper

./: .gitmodules  CHANGELOG.md  LinguaQuanta.cabal  QasmParser.hs  QasmQuipperTranslator.cabal  README.md  adder-in-out.qasm  adder-out-in-out.quipper  example.qasm  example.quipper
docker/: README.md  linguaquanta.Dockerfile
examples/: README.md
examples/qft/: qft.2.qasm  qft.3.qasm  qft.quip
examples/qpe/: qpe.3.qasm  qpe.quip
exe/: CmdLnFlags.hs  IOUtils.hs  QasmAnalyzer.hs  QasmCmdLn.hs  QasmParser.hs  QasmPrinter.hs  QasmTools.hs  QasmUtils.hs  QuipCmdLn.hs  QuipTools.hs  README.md  SetupTools.hs
exe/ElimCtrls/: CmdLn.hs  Main.hs
exe/ElimFuns/: CmdLn.hs  Main.hs
exe/ElimInvs/: CmdLn.hs  Main.hs
exe/ElimPows/: CmdLn.hs  Main.hs
exe/FormatQasm/: CmdLn.hs  Main.hs
exe/FormatQuip/: CmdLn.hs  Main.hs
exe/QasmToQuip/: CmdLn.hs  Main.hs
exe/QasmTools/: CmdLn.hs  Main.hs
exe/QuipToQasm/: CmdLn.hs  Main.hs
exe/QuipTools/: CmdLn.hs  Main.hs
exe/RegMerge/: CmdLn.hs  Main.hs
exe/ToLsc/: CmdLn.hs  Main.hs
libs/: README.md  bkpgates.inc  quipfuncs.inc  quipgates.inc
parser/: Lexer.x  Main.hs  Parser.y  QasmLang.hs  README.md
scripts/: README.md  lingua_quanta_utils.sh  quip_to_lsc.sh  quip_to_qasm2.sh
src/: Passes.hs  README.md  Utils.hs
src/LinguaQuanta/: MaxTracker.hs  Utils.hs
src/LinguaQuanta/LinguaQuanta/: Either.hs  List.hs  Maybe.hs
src/LinguaQuanta/LinguaQuanta/Qasm/: AST.hs  Call.hs  Expression.hs  Gate.hs  GateName.hs  Header.hs  Inversion.hs  Language.hs  LatticeSurgery.hs  Lexer.x  Operand.hs  Parser.y  Passes.hs  Printer.hs
src/LinguaQuanta/LinguaQuanta/QasmToQuip/: Ancilla.hs  Assign.hs  Call.hs  Control.hs  Gate.hs  Operand.hs  Translator.hs  Wire.hs
src/LinguaQuanta/LinguaQuanta/Quip/: Gate.hs  Quipper.hs  Transformers.hs  Wire.hs
src/LinguaQuanta/LinguaQuanta/QuipToQasm/: Ancilla.hs  Gate.hs  Measurement.hs  Translator.hs  Wire.hs
src/LinguaQuanta/Qasm/: Inversion.hs  Language.hs  Passes.hs  Printer.hs
src/LinguaQuanta/QasmToQuip/: Translator.hs  Wire.hs
src/LinguaQuanta/Quip/: GateName.hs  Quipper.hs  Transformers.hs
src/LinguaQuanta/QuipToQasm/: Translator.hs
src/LinguaQuantaExe/LinguaQuantaExe/: CmdLnFlags.hs  CmdLnParser.hs  IOUtils.hs  QasmUtils.hs  SetupTools.hs
src/Qasm/: AST.hs  Expression.hs  Gate.hs  GateName.hs  Inversion.hs  Language.hs  Lexer.x  Parser.y  Passes.hs  Printer.hs
src/QasmToQuip/: Wire.hs
src/Quip/: Gate.hs  GateName.hs  Parser.hs  Transformers.hs  Wire.hs
src/QuipToQasm/: Translator.hs
test/: List-Tests.hs  Maybe-Tests.hs  Qasm-Expression-Tests.hs  Qasm-Gate-Tests.hs  Qasm-Header-Tests.hs  Qasm-Inversion-Tests.hs  Qasm-LatticeSurgery-Tests.hs  Qasm-Parser-Tests.hs  Qasm-Passes-Tests.hs  QasmToQuip-Ancilla-Tests.hs  QasmToQuip-Assign-Tests.hs  QasmToQuip-Call-Tests.hs  QasmToQuip-Control-Tests.hs  QasmToQuip-Gate-Tests.hs  QasmToQuip-Translator-Tests.hs  QasmToQuip-Wire-Tests.hs  Quip-Gate-Tests.hs  Quip-Parser-Tests.hs  Quip-Transformers-Tests.hs  Quip-Wire-Tests.hs  QuipToQasm-Ancilla-Tests.hs  QuipToQasm-Gate-Tests.hs  QuipToQasm-Measurement-Tests.hs  QuipToQasm-Translator-Tests.hs  QuipToQasm-Wire-Tests.hs  Utils-Tests.hs
test/decomps/: Gates.g  d1_e.tst  d1_ix.tst  d1_w.tst  d2_crx.tst  d2_cry.tst  d2_rx.tst  d2_ry.tst  d3_cp.tst  d3_crx.tst  d3_cry.tst  d3_cswap.tst  d3_swap.tst  d3_sx.tst  d4_e.tst  d4_ix.tst  d4_omega.tst  d4_sx.tst  d5_ce.tst  d5_cix.tst  d5_comega.tst  d5_cs.tst  d5_ct.tst  d5_cv.tst  d5_cw.tst  d6_ccix.tst  d6_ccx.tst  d6_ccz.tst  d6_ch.tst  d6_cswap.tst  inv_e.tst  inv_ix.tst  inv_omega.tst  inv_sx.tst  quip_e.tst  quip_omega.tst  quip_w.tst
test/unit/: Either-Tests.hs  MaxTracker-Tests.hs  Qasm-AST-Tests.hs  Qasm-Call-Tests.hs  Qasm-Expression-Tests.hs  Qasm-Inversion-Tests.hs  Qasm-Parser-Tests.hs  QasmToQuip-Gate-Tests.hs  QasmToQuip-Operand-Tests.hs  QasmToQuip-Translator-Tests.hs  Quip-Quipper-Tests.hs  Quip-Transformers-Tests.hs  Quip-Wire-Tests.hs  QuipToQasm-Gate-Tests.hs  QuipToQasm-Translator-Tests.hs  QuipToQasm-Wire-Tests.hs
