cabal-version:       2.2

name:                LinguaQuanta
version:             0.1.0.0
synopsis:            Parsing and translation tools for Quipper and OpenQASM 3.
-- description:
license:             CC0-1.0
license-file:        LICENSE
author:              Xiaoning Bian, Scott Wesley
maintainer:          scott.wesley@dal.ca
-- copyright:
category:            Quantum
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

-----------------------------------------------------------------------------------------
-- Main library.

library
  exposed-modules:     LinguaQuanta.MaxTracker
                       LinguaQuanta.Maybe
                       LinguaQuanta.List
                       LinguaQuanta.Qasm.AST
                       LinguaQuanta.Qasm.Expression
                       LinguaQuanta.Qasm.Gate
                       LinguaQuanta.Qasm.GateName
                       LinguaQuanta.Qasm.Inversion
                       LinguaQuanta.Qasm.Language
                       LinguaQuanta.Qasm.Operand
                       LinguaQuanta.Qasm.Passes
                       LinguaQuanta.Qasm.Parser
                       LinguaQuanta.Qasm.Printer
                       LinguaQuanta.QasmToQuip.Ancilla
                       LinguaQuanta.QasmToQuip.Assign
                       LinguaQuanta.QasmToQuip.Control
                       LinguaQuanta.QasmToQuip.Gate
                       LinguaQuanta.QasmToQuip.Operand
                       LinguaQuanta.QasmToQuip.Translator
                       LinguaQuanta.QasmToQuip.Wire
                       LinguaQuanta.Quip.Gate
                       LinguaQuanta.Quip.GateName
                       LinguaQuanta.Quip.Quipper
                       LinguaQuanta.Quip.Transformers
                       LinguaQuanta.Quip.Wire
                       LinguaQuanta.QuipToQasm.Ancilla
                       LinguaQuanta.QuipToQasm.Gate
                       LinguaQuanta.QuipToQasm.Measurement
                       LinguaQuanta.QuipToQasm.Translator
                       LinguaQuanta.QuipToQasm.Wire
  other-modules:       LinguaQuanta.Qasm.Lexer
  build-tools:         happy,
                       alex
  build-depends:       base,
                       array,
                       cond,
                       containers,
                       filepath,
                       newsynth,
                       quipper-language,
                       quipper-libraries
  hs-source-dirs:      src/LinguaQuanta
  default-language:    Haskell2010

-----------------------------------------------------------------------------------------
-- Executables.

library LinguaQuantaExe
  exposed-modules:     LinguaQuantaExe.CmdLnFlags
                       LinguaQuantaExe.CmdLnParser
                       LinguaQuantaExe.IOUtils
                       LinguaQuantaExe.QasmUtils
                       LinguaQuantaExe.SetupTools
  build-depends:       base,
                       cmdargs,
                       directory,
                       LinguaQuanta
  hs-source-dirs:      src/LinguaQuantaExe
  default-language:    Haskell2010

executable elim_ctrls
  main-is:             ElimCtrls/Main.hs
  other-modules:       ElimCtrls.CmdLn
  build-depends:       base,
                       LinguaQuanta,
                       LinguaQuantaExe
  hs-source-dirs:      exe
  default-language:    Haskell2010

executable elim_invs
  main-is:             ElimInvs/Main.hs
  other-modules:       ElimInvs.CmdLn
  build-depends:       base,
                       LinguaQuanta,
                       LinguaQuantaExe
  hs-source-dirs:      exe
  default-language:    Haskell2010

executable elim_pows
  main-is:             ElimPows/Main.hs
  other-modules:       ElimPows.CmdLn
  build-depends:       base,
                       LinguaQuanta,
                       LinguaQuantaExe
  hs-source-dirs:      exe
  default-language:    Haskell2010

executable format_qasm
  main-is:             FormatQasm/Main.hs
  other-modules:       FormatQasm.CmdLn
  build-depends:       base,
                       LinguaQuanta,
                       LinguaQuantaExe
  hs-source-dirs:      exe
  default-language:    Haskell2010

executable format_quip
  main-is:             FormatQuip/Main.hs
  other-modules:       FormatQuip.CmdLn
  build-depends:       base,
                       LinguaQuantaExe,
                       quipper-language,
                       quipper-libraries
  hs-source-dirs:      exe
  default-language:    Haskell2010

executable qasm_to_quip
  main-is:             QasmToQuip/Main.hs
  other-modules:       QasmToQuip.CmdLn
  build-depends:       base,
                       LinguaQuanta,
                       LinguaQuantaExe
  hs-source-dirs:      exe
  default-language:    Haskell2010

executable qasm_tools
  main-is:             QasmTools/Main.hs
  other-modules:       QasmTools.CmdLn
  build-depends:       base,
                       LinguaQuanta,
                       LinguaQuantaExe,
                       pretty-simple
  hs-source-dirs:      exe
  default-language:    Haskell2010

executable quip_to_qasm
  main-is:             QuipToQasm/Main.hs
  other-modules:       QuipToQasm.CmdLn
  build-depends:       base,
                       LinguaQuanta,
                       LinguaQuantaExe
  hs-source-dirs:      exe
  default-language:    Haskell2010

executable quip_tools
  main-is:             QuipTools/Main.hs
  other-modules:       QuipTools.CmdLn
  build-depends:       base,
                       LinguaQuanta,
                       LinguaQuantaExe,
                       pretty-simple
  hs-source-dirs:      exe
  default-language:    Haskell2010

-----------------------------------------------------------------------------------------
-- Unit Testing.

common basic-unit-test-props
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       LinguaQuanta

test-suite maxtracker-tests
  import:              basic-unit-test-props
  main-is:             MaxTracker-Tests.hs
  type:                exitcode-stdio-1.0

test-suite maybe-tests
  import:              basic-unit-test-props
  main-is:             Maybe-Tests.hs
  type:                exitcode-stdio-1.0

test-suite list-tests
  import:              basic-unit-test-props
  main-is:             List-Tests.hs
  type:                exitcode-stdio-1.0

test-suite qasm-ast-tests
  import:              basic-unit-test-props
  main-is:             Qasm-AST-Tests.hs
  type:                exitcode-stdio-1.0

test-suite qasm-expression-tests
  import:              basic-unit-test-props
  main-is:             Qasm-Expression-Tests.hs
  type:                exitcode-stdio-1.0

test-suite qasm-gate-tests
  import:              basic-unit-test-props
  main-is:             Qasm-Gate-Tests.hs
  type:                exitcode-stdio-1.0

test-suite qasm-inversion-tests
  import:              basic-unit-test-props
  main-is:             Qasm-Inversion-Tests.hs
  type:                exitcode-stdio-1.0

test-suite qasm-parser-tests
  import:              basic-unit-test-props
  main-is:             Qasm-Parser-Tests.hs
  type:                exitcode-stdio-1.0

test-suite qasm-passes-tests
  import:              basic-unit-test-props
  main-is:             Qasm-Passes-Tests.hs
  type:                exitcode-stdio-1.0

test-suite qasmtoquip-ancilla-tests
  import:              basic-unit-test-props
  main-is:             QasmToQuip-Ancilla-Tests.hs
  build-depends:       containers
  type:                exitcode-stdio-1.0

test-suite qasmtoquip-assign-tests
  import:              basic-unit-test-props
  main-is:             QasmToQuip-Assign-Tests.hs
  build-depends:       containers
  type:                exitcode-stdio-1.0

test-suite qasmtoquip-control-tests
  import:              basic-unit-test-props
  main-is:             QasmToQuip-Control-Tests.hs
  build-depends:       containers
  type:                exitcode-stdio-1.0

test-suite qasmtoquip-gate-tests
  import:              basic-unit-test-props
  main-is:             QasmToQuip-Gate-Tests.hs
  build-depends:       containers
  type:                exitcode-stdio-1.0

test-suite qasmtoquip-operand-tests
  import:              basic-unit-test-props
  main-is:             QasmToQuip-Operand-Tests.hs
  build-depends:       containers
  type:                exitcode-stdio-1.0

test-suite qasmtoquip-translator-tests
  import:              basic-unit-test-props
  main-is:             QasmToQuip-Translator-Tests.hs
  build-depends:       containers
  type:                exitcode-stdio-1.0

test-suite qasmtoquip-wire-tests
  import:              basic-unit-test-props
  main-is:             QasmToQuip-Wire-Tests.hs
  build-depends:       containers
  type:                exitcode-stdio-1.0

test-suite quip-gate-tests
  import:              basic-unit-test-props
  main-is:             Quip-Gate-Tests.hs
  type:                exitcode-stdio-1.0

test-suite quip-quipper-tests
  import:              basic-unit-test-props
  main-is:             Quip-Quipper-Tests.hs
  type:                exitcode-stdio-1.0

test-suite quip-transformers-tests
  import:              basic-unit-test-props
  main-is:             Quip-Transformers-Tests.hs
  build-depends:       quipper-language
  type:                exitcode-stdio-1.0

test-suite quip-wire-tests
  import:              basic-unit-test-props
  main-is:             Quip-Wire-Tests.hs
  build-depends:       containers
  type:                exitcode-stdio-1.0

test-suite quiptoqasm-ancilla-tests
  import:              basic-unit-test-props
  main-is:             QuipToQasm-Ancilla-Tests.hs
  build-depends:       containers
  type:                exitcode-stdio-1.0

test-suite quiptoqasm-gate-tests
  import:              basic-unit-test-props
  main-is:             QuipToQasm-Gate-Tests.hs
  build-depends:       containers
  type:                exitcode-stdio-1.0

test-suite quiptoqasm-measurement-tests
  import:              basic-unit-test-props
  main-is:             QuipToQasm-Measurement-Tests.hs
  build-depends:       containers
  type:                exitcode-stdio-1.0

test-suite quiptoqasm-translator-tests
  import:              basic-unit-test-props
  main-is:             QuipToQasm-Translator-Tests.hs
  build-depends:       containers
  type:                exitcode-stdio-1.0

test-suite quiptoqasm-wire-tests
  import:              basic-unit-test-props
  main-is:             QuipToQasm-Wire-Tests.hs
  build-depends:       containers
  type:                exitcode-stdio-1.0
