cabal-version:       2.2

name:                QasmQuipperTranslator
version:             0.1.0.0
synopsis:            Parsing and translation tools for Quipper and OpenQASM 3.
-- description:
license:             CC0-1.0
license-file:        LICENSE
author:              Xiaoning Bian, Scott Wesley
maintainer:          scott.wesley@dal.ca
-- copyright:
category:            Quantum
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:     Qasm.AST
                       Qasm.Expression
                       Qasm.Gate
                       Qasm.GateName
                       Qasm.Language
                       Qasm.Passes
                       Qasm.Parser
                       Qasm.Printer
  other-modules:       Qasm.Lexer
  build-tools:         happy,
                       alex
  build-depends:       base >=4.12 && <4.13,
                       array,
                       filepath
  hs-source-dirs:      src
  default-language:    Haskell2010

executable qasm_parser
  main-is:             QasmParser.hs
  other-modules:       QasmUtils
  build-depends:       base >=4.12 && <4.13,
                       pretty-simple,
                       QasmQuipperTranslator
  hs-source-dirs:      exe
  default-language:    Haskell2010

executable qasm_analyzer
  main-is:             QasmAnalyzer.hs
  other-modules:       QasmUtils
  build-depends:       base >=4.12 && <4.13,
                       pretty-simple,
                       QasmQuipperTranslator
  hs-source-dirs:      exe
  default-language:    Haskell2010

executable qasm_printer
  main-is:             QasmPrinter.hs
  other-modules:       QasmUtils
  build-depends:       base >=4.12 && <4.13,
                       pretty-simple,
                       QasmQuipperTranslator
  hs-source-dirs:      exe
  default-language:    Haskell2010

common basic-unit-test-props
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       QasmQuipperTranslator

test-suite qasm-expression-tests
  import:              basic-unit-test-props
  main-is:             Qasm-Expression-Tests.hs
  type:                exitcode-stdio-1.0

test-suite qasm-gate-tests
  import:              basic-unit-test-props
  main-is:             Qasm-Gate-Tests.hs
  type:                exitcode-stdio-1.0
