cabal-version:       2.2

name:                QasmQuipperTranslator
version:             0.1.0.0
synopsis:            Parsing and translation tools for Quipper and OpenQASM 3.
-- description:
license:             CC0-1.0
license-file:        LICENSE
author:              Xiaoning Bian, Scott Wesley
maintainer:          scott.wesley@dal.ca
-- copyright:
category:            Quantum
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:     Utils
                       Qasm.AST
                       Qasm.Expression
                       Qasm.Gate
                       Qasm.GateName
                       Qasm.Inversion
                       Qasm.Language
                       Qasm.Passes
                       Qasm.Parser
                       Qasm.Printer
                       Quip.Parser
  other-modules:       Qasm.Lexer
  build-tools:         happy,
                       alex
  build-depends:       base,
                       array,
                       filepath,
                       newsynth,
                       quipper-language,
                       quipper-libraries
  hs-source-dirs:      src
  default-language:    Haskell2010

executable qasm_tools
  main-is:             QasmTools.hs
  other-modules:       IOUtils,
                       QasmCmdLn
  build-depends:       base,
                       cmdargs,
                       directory,
                       pretty-simple,
                       QasmQuipperTranslator
  hs-source-dirs:      exe
  default-language:    Haskell2010

common basic-unit-test-props
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       QasmQuipperTranslator

test-suite qasm-expression-tests
  import:              basic-unit-test-props
  main-is:             Qasm-Expression-Tests.hs
  type:                exitcode-stdio-1.0

test-suite qasm-gate-tests
  import:              basic-unit-test-props
  main-is:             Qasm-Gate-Tests.hs
  type:                exitcode-stdio-1.0

test-suite qasm-inversion-tests
  import:              basic-unit-test-props
  main-is:             Qasm-Inversion-Tests.hs
  type:                exitcode-stdio-1.0

test-suite utils-tests
  import:              basic-unit-test-props
  main-is:             Utils-Tests.hs
  type:                exitcode-stdio-1.0

test-suite qasm-passes-tests
  import:              basic-unit-test-props
  main-is:             Qasm-Passes-Tests.hs
  type:                exitcode-stdio-1.0

test-suite qasm-parser-tests
  import:              basic-unit-test-props
  main-is:             Qasm-Parser-Tests.hs
  type:                exitcode-stdio-1.0

test-suite quip-parser-tests
  import:              basic-unit-test-props
  main-is:             Quip-Parser-Tests.hs
  type:                exitcode-stdio-1.0
